# STUDY-DUO

./: .env  .gitignore  Docker-compose.yml  README.md  main.py  pyproject.toml  r.txt  requirment.txt
Tutor_AI_service/backend/api/: api.py
Tutor_AI_service/backend/api/router/: api_endpoint.py
Tutor_AI_service/backend/client/: client.py
Tutor_AI_service/backend/config/: config.json  userclass.py
Tutor_AI_service/backend/core/: kafka_producer_core.py  mcp_agent_core.py
Tutor_AI_service/backend/infra/: kafka_producer_client.py  mcp_agent_client.py
Tutor_AI_service/backend/services/: kafka_producer_service.py  mcp_agent_service.py
agent_utils/tools/: ai_tools.py
api/: endpoint.py
core/: agent_abstration.py
graph/: agent_graph.py
infra/: agnet_client.py  redish_abstraction.py
router/: api_endpoints.py
service/: agent_node.py
student_Analaysis_service/backend/api/: api.py
student_Analaysis_service/backend/config/: config.json
student_Analaysis_service/backend/core/: analaysis_core.py
student_Analaysis_service/backend/infra/: student_analaysis_infra.py
utils/: logger.py
